--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
+    "minidev": "^1.1.3",
+    "miniprogram-ci": "^1.6.10",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
     "vue-class-component": "^6.3.2",
